fixed back ground image cut off issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,7 @@ body {
   height: 100vh;
   background: none;
   position: relative;
+  min-height: 100vh
 }
 
 a {
