--- a/styles/view.scss
+++ b/styles/view.scss
@@ -3,7 +3,7 @@
 .app-cont {
   position: relative;
   // height: 100vh;
-  height: min-height;
+  // height: min-height;
   background-image: url(../public/Vibrant.jpg);
   // background-repeat: no-repeat;
   background-size: cover;
@@ -11,6 +11,7 @@
   background-position: center;
   background-attachment: fixed;
   @include padding(0%, 2%);
+  min-height: 100vh;
 
   * {
     position: relative;
